// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binaryish.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const computedDescriptionLines = (showConfirm &&
  descriptionLinesConfirming) ||
  (focused && !loading && descriptionLinesFocused) ||
  descriptionLines;

computedDescriptionLines = (focused &&
  !loading &&
  descriptionLinesFocused) ||
  descriptionLines;

=====================================output=====================================
const computedDescriptionLines =
  (showConfirm && descriptionLinesConfirming) ||
  (focused && !loading && descriptionLinesFocused) ||
  descriptionLines;

computedDescriptionLines =
  (focused && !loading && descriptionLinesFocused) || descriptionLines;

================================================================================
`;

exports[`chain.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let bifornCringerMoshedPerplexSawder=
askTrovenaBeenaDependsRowans=
glimseGlyphsHazardNoopsTieTie=
averredBathersBoxroomBuggyNurl=
anodyneCondosMalateOverateRetinol=
annularCooeedSplicesWalksWayWay=
kochabCooieGameOnOboleUnweave;

bifornCringerMoshedPerplexSawder =
  askTrovenaBeenaDependsRowans =
  glimseGlyphsHazardNoopsTieTie =
  x =
  averredBathersBoxroomBuggyNurl =
  anodyneCondosMal(sdsadsa,dasdas,asd(()=>sdf)).ateOverateRetinol =
  annularCooeedSplicesWalksWayWay =
    kochabCooieGameOnOboleUnweave;

bifornCringerMoshedPerplexSawder =
  askTrovenaBeenaDependsRowans =
  glimseGlyphsHazardNoopsTieTie =
  x =
  averredBathersBoxroomBuggyNurl =
  anodyneCondosMal(sdsadsa,dasdas,asd(()=>sdf)).ateOverateRetinol =
  annularCooeedSplicesWalksWayWay =
    kochabCooieGameOnOboleUnweave+kochabCooieGameOnOboleUnweave;

a=b=c;

=====================================output=====================================
let bifornCringerMoshedPerplexSawder =
  (askTrovenaBeenaDependsRowans =
    glimseGlyphsHazardNoopsTieTie =
    averredBathersBoxroomBuggyNurl =
    anodyneCondosMalateOverateRetinol =
    annularCooeedSplicesWalksWayWay =
      kochabCooieGameOnOboleUnweave);

bifornCringerMoshedPerplexSawder =
  askTrovenaBeenaDependsRowans =
  glimseGlyphsHazardNoopsTieTie =
  x =
  averredBathersBoxroomBuggyNurl =
  anodyneCondosMal(
    sdsadsa,
    dasdas,
    asd(() => sdf)
  ).ateOverateRetinol =
  annularCooeedSplicesWalksWayWay =
    kochabCooieGameOnOboleUnweave;

bifornCringerMoshedPerplexSawder =
  askTrovenaBeenaDependsRowans =
  glimseGlyphsHazardNoopsTieTie =
  x =
  averredBathersBoxroomBuggyNurl =
  anodyneCondosMal(
    sdsadsa,
    dasdas,
    asd(() => sdf)
  ).ateOverateRetinol =
  annularCooeedSplicesWalksWayWay =
    kochabCooieGameOnOboleUnweave + kochabCooieGameOnOboleUnweave;

a = b = c;

================================================================================
`;

exports[`destructuring.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let {
  bottom: offsetBottom,
  left: offsetLeft,
  right: offsetRight,
  top: offsetTop,
} = getPressRectOffset == null ? DEFAULT_PRESS_RECT : getPressRectOffset();

const { accessibilityModule: FooAccessibilityModule, accessibilityModule: FooAccessibilityModule2, accessibilityModule: FooAccessibilityModule3, accessibilityModule: FooAccessibilityModule4,
      } = foo || {};

({ prop: toAssign = "default" } = { prop: "propval" });

=====================================output=====================================
let {
  bottom: offsetBottom,
  left: offsetLeft,
  right: offsetRight,
  top: offsetTop,
} = getPressRectOffset == null ? DEFAULT_PRESS_RECT : getPressRectOffset();

const {
  accessibilityModule: FooAccessibilityModule,
  accessibilityModule: FooAccessibilityModule2,
  accessibilityModule: FooAccessibilityModule3,
  accessibilityModule: FooAccessibilityModule4,
} = foo || {};

({ prop: toAssign = "default" } = { prop: "propval" });

================================================================================
`;

exports[`issue-1419.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
someReallyLongThingStoredInAMapWithAReallyBigName[pageletID] =
  _someVariableThatWeAreCheckingForFalsiness
    ? Date.now() - _someVariableThatWeAreCheckingForFalsiness
    : 0;

=====================================output=====================================
someReallyLongThingStoredInAMapWithAReallyBigName[pageletID] =
  _someVariableThatWeAreCheckingForFalsiness
    ? Date.now() - _someVariableThatWeAreCheckingForFalsiness
    : 0;

================================================================================
`;

exports[`issue-1966.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const aVeryLongNameThatGoesOnAndOn = this.someOtherObject.someOtherNestedObject.someLongFunctionName();

this.someObject.someOtherNestedObject = this.someOtherObject.whyNotNestAnotherOne.someLongFunctionName();

this.isaverylongmethodexpression.withmultiplelevels = this.isanotherverylongexpression.thatisalsoassigned = 0;

=====================================output=====================================
const aVeryLongNameThatGoesOnAndOn =
  this.someOtherObject.someOtherNestedObject.someLongFunctionName();

this.someObject.someOtherNestedObject =
  this.someOtherObject.whyNotNestAnotherOne.someLongFunctionName();

this.isaverylongmethodexpression.withmultiplelevels =
  this.isanotherverylongexpression.thatisalsoassigned =
    0;

================================================================================
`;

exports[`issue-2184.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const areaPercentageDiff = (
    topRankedZoneFit.areaPercentageRemaining
  - previousZoneFitNow.areaPercentageRemaining
).toFixed(2)

=====================================output=====================================
const areaPercentageDiff = (
  topRankedZoneFit.areaPercentageRemaining -
  previousZoneFitNow.areaPercentageRemaining
).toFixed(2);

================================================================================
`;

exports[`issue-2482-1.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  'a very long string for illustrative purposes'.length;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes();

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes.length;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes + 1;


=====================================output=====================================
aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  "a very long string for illustrative purposes".length;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes();

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes.length;

aParticularlyLongAndObnoxiousNameForIllustrativePurposes =
  anotherVeryLongNameForIllustrativePurposes + 1;

================================================================================
`;

exports[`issue-2540.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
manifestCache[templateId] = readFileSync(\`\${MANIFESTS_PATH}/\${templateId}.json\`, { encoding: 'utf-8' });

=====================================output=====================================
manifestCache[templateId] = readFileSync(
  \`\${MANIFESTS_PATH}/\${templateId}.json\`,
  { encoding: "utf-8" }
);

================================================================================
`;

exports[`issue-3819.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
this.dummy.type1.dummyPropertyFunction
      = this.dummy.type2.dummyPropertyFunction
      = this.dummy.type3.dummyPropertyFunction
      = this.dummy.type4.dummyPropertyFunction
      = this.dummy.type5.dummyPropertyFunction
      = this.dummy.type6.dummyPropertyFunction
      = this.dummy.type7.dummyPropertyFunction
      = this.dummy.type8.dummyPropertyFunction
      = () => {
        return 'dummy';
      };

=====================================output=====================================
this.dummy.type1.dummyPropertyFunction =
  this.dummy.type2.dummyPropertyFunction =
  this.dummy.type3.dummyPropertyFunction =
  this.dummy.type4.dummyPropertyFunction =
  this.dummy.type5.dummyPropertyFunction =
  this.dummy.type6.dummyPropertyFunction =
  this.dummy.type7.dummyPropertyFunction =
  this.dummy.type8.dummyPropertyFunction =
    () => {
      return "dummy";
    };

================================================================================
`;

exports[`issue-4094.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (something) {
  const otherBrandsWithThisAdjacencyCount123 = Object.values(edge.to.edges).length
}

=====================================output=====================================
if (something) {
  const otherBrandsWithThisAdjacencyCount123 = Object.values(edge.to.edges)
    .length;
}

================================================================================
`;

exports[`issue-10218.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const _id1 = data.createTestMessageWithAReallyLongName.someVeryLongProperty.thisIsAlsoALongProperty._id;

const {_id2} = data.createTestMessageWithAReallyLongName.someVeryLongProperty.thisIsAlsoALongProperty;

const {_id:id3} = data.createTestMessageWithAReallyLongName.someVeryLongProperty.thisIsAlsoALongProperty;

=====================================output=====================================
const _id1 =
  data.createTestMessageWithAReallyLongName.someVeryLongProperty
    .thisIsAlsoALongProperty._id;

const { _id2 } =
  data.createTestMessageWithAReallyLongName.someVeryLongProperty
    .thisIsAlsoALongProperty;

const { _id: id3 } =
  data.createTestMessageWithAReallyLongName.someVeryLongProperty
    .thisIsAlsoALongProperty;

================================================================================
`;

exports[`sequence.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for ((i = 0), (len = arr.length); i < len; i++) {
  console.log(arr[i])
}

for (i = 0, len = arr.length; i < len; i++) {
  console.log(arr[i])
}

=====================================output=====================================
for (i = 0, len = arr.length; i < len; i++) {
  console.log(arr[i]);
}

for (i = 0, len = arr.length; i < len; i++) {
  console.log(arr[i]);
}

================================================================================
`;

exports[`unary.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const loooooooooooooooooooooooooong1 = void looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong2 = void "looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong3 = !looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong4 = !"looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong5 = void void looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong6 = void void "looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong7 = !!looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong8 = !!"looooooooooooooooooooooooooooooooooooooooooog";

=====================================output=====================================
const loooooooooooooooooooooooooong1 =
  void looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong2 =
  void "looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong3 =
  !looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong4 =
  !"looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong5 =
  void void looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong6 =
  void void "looooooooooooooooooooooooooooooooooooooooooog";
const loooooooooooooooooooooooooong7 =
  !!looooooooooooooong.looooooooooooooong.loooooong;
const loooooooooooooooooooooooooong8 =
  !!"looooooooooooooooooooooooooooooooooooooooooog";

================================================================================
`;
